Added skills & salary to the candidates show

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -25,6 +25,16 @@
 </p>
 
 <p>
+  <b>Salary:</b>
+  <%= @candidate.salary %>
+</p>
+
+<p>
+  <b>Skills:</b>
+  <%= @candidate.skills %>
+</p>
+
+<p>
   <b>Company:</b>
   <%= @candidate.company.name %>
 </p>
