Added location data to candidates table on seeds file. Added location to candidates show.

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -10,6 +10,11 @@
 </p>
 
 <p>
+  <b>Location:</b>
+  <%= @candidate.location %>
+</p>
+
+<p>
   <b>Industry:</b>
   <%= @candidate.industry %>
 </p>
