Added CandidateAttribute views, methods to check User types and locked JobsController access.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,17 @@
     <p>Welcome back, <%= session[:email] %>.</p>
   <% end %>
 
-    <% if notice.present? %>
+    <% if flash[:notice] %>
     <div class="alert alert-success">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <%= notice %>
+      <%= flash[:notice] %>
+    </div>
+    <% end %>
+
+    <% if flash[:error] %>
+    <div class="alert alert-error">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:error] %>
     </div>
     <% end %>
 
