--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <li><%= link_to "Calendar", "#" %></li>
             <li><%= link_to "Candidates", candidates_url %></li>
             <li><%= link_to "Clients", clients_url %></li>
-            <li><%= link_to "Jobs", jobs_url(view: :list) %></li>
+            <li><%= link_to "Jobs", jobs_url(:view => "all") %></li>
             <li><%= link_to "Notes", notes_url %></li>
             <% if signed_in? %>
             <li><%= link_to "Sign Out", signout_url, method: 'delete' %></li>
@@ -58,6 +58,13 @@
     <div class="alert alert-error">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       <%= flash[:error] %>
+    </div>
+    <% end %>
+
+    <% if flash[:warning] %>
+    <div class="alert alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:warning] %>
     </div>
     <% end %>
 
