Ability to submit candidate for jobs

--- a/app/views/candidate_jobs/index.html.erb
+++ b/app/views/candidate_jobs/index.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Hiring Manager:</b>
-    <%= @job.external_job.hiring_manager.user.full_name %>
+    <%= @job.external_job.hiring_manager.full_name %>
 </p>
 
 <h4>List of Candidates</h4>
