--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,4 +1,3 @@
-
 <p>
   <b>Full name:</b>
   <%= @candidate.try(:full_name) %>
@@ -44,14 +43,13 @@
   <%= @candidate.try(:candidate_attribute).try(:company).try(:name) %>
 </p>
 
-<h5>Notes by recruiter(s):</h5>
+<h5>Notes:</h5>
 <table>
   <thead>
     <tr>
       <th>Date</th>
       <th>Name</th>
       <th>Comments</th>
-      <th>Job Title</th>
       <th></th>
       <th></th>
       <th></th>
@@ -61,42 +59,42 @@
   <tbody>
   <% @candidate.recruiter_notes.each do |recruiter_note| %>
     <tr>
-      <td><%= recruiter_note.note.date %></td>
+      <td><%= recruiter_note.note.created_at.strftime("%-m-%-d-%y %l:%M") %></td>
       <td><%= recruiter_note.recruiter.full_name %></td>
       <td><%= recruiter_note.note.description %></td>
-      <td><%= recruiter_note.note.job.title %></td>
+  <% end %>
+    </tr>
+
+  <% @candidate.hiring_manager_notes.each do |hiring_manager_note| %>
+     <tr>
+      <td><%= hiring_manager_note.note.created_at.strftime("%-m-%-d-%y %l:%M") %></td>
+      <td><%= hiring_manager_note.hiring_manager.full_name %></td>
+      <td><%= hiring_manager_note.note.description %></td>
     </tr>
   <% end %>
   </tbody>
 </table>
 
-<h5>Notes by Hiring Manager(s):</h5>
+<%= form_tag('/recruiter_notes') do %>
+  <div><%= text_area_tag 'note' %></div>
+  <div> <%= submit_tag "Post Notes" %></div>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Name</th>
-      <th>Comments</th>
-      <th>Job Title</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-  <% @candidate.hiring_manager_notes.each do |hiring_manager_note| %>
-      <tr>
-        <td><%= hiring_manager_note.note.date %></td>
-        <td><%= hiring_manager_note.hiring_manager.full_name %></td>
-        <td><%= hiring_manager_note.note.description %></td>
-        <td><%= hiring_manager_note.note.job.title %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div>Select Job</div>
 
 <p>
-<%= link_to 'View Profile', user_url(@candidate) %>
+  <%= link_to 'View Profile', user_url(@candidate) %>
 </p>
+
+  <%= form_tag('/submit_jobs_for_candidate') do %>
+    <% current_user.jobs.each do |job| %>
+    <div>
+      <%= check_box_tag "job_ids[]", job.id %>
+      <%= job.client_jobs.first.client.name %> -
+      <%= job.title %>
+    </div>
+  <% end %>
+  <%= hidden_field_tag 'candidate_id', @candidate.id %>
+  <div> <%= submit_tag "send" %></div>
+<% end %>
+
