Completed Jobs display for Recruiter as him/herself and agency view.

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -21,7 +21,7 @@
   <% @jobs.each do |job| %>
     <tr>
       <td><%= job.title %></td>
-      <td><%= job.description %></td>
+      <td><%= truncate(job.description) %></td>
       <td><%= job.location %></td>
       <td><%= job.email %></td>
       <td><%= job.url %></td>
