removed client_jobs in favor of job belongs_to client and client has_many jobs

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -90,7 +90,7 @@
     <% current_user.jobs.each do |job| %>
     <div>
       <%= check_box_tag "job_ids[]", job.id %>
-      <%= job.client_jobs.first.client.name %> -
+      <%= job.client.name %> -
       <%= job.title %>
     </div>
   <% end %>
